<resources>
	<string-array name="DialingCountryCode" >
		<item>AB,+7840,+7940,+99544</item>
		<item>AF,+93</item>
		<item>AX,+35818</item>
		<item>AL,+355</item>
		<item>DZ,+213</item>
		<item>AS,+1684</item>
		<item>AD,+376</item>
		<item>AO,+244</item>
		<item>AI,+1264</item>
		<item>AG,+1268</item>
		<item>AR,+54</item>
		<item>AM,+374</item>
		<item>AW,+297</item>
		<item>SH,+247</item>
		<item>AU,+61</item>
		<item>AU,+672</item>
		<item>AT,+43</item>
		<item>AZ,+994</item>
		<item>BS,+1242</item>
		<item>BH,+973</item>
		<item>BD,+880</item>
		<item>BB,+1246</item>
		<item>AG,+1268</item>
		<item>BY,+375</item>
		<item>BE,+32</item>
		<item>BZ,+501</item>
		<item>BJ,+229</item>
		<item>BM,+1441</item>
		<item>BT,+975</item>
		<item>BO,+591</item>
		<item>BQ,+5997</item>
		<item>BA,+387</item>
		<item>BW,+267</item>
		<item>BR,+55</item>
		<item>IO,+246</item>
		<item>VG,+1284</item>
		<item>BN,+673</item>
		<item>BG,+359</item>
		<item>BF,+226</item>
		<item>MY,+95</item>
		<item>BI,+257</item>
		<item>KH,+855</item>
		<item>CM,+237</item>
		<item>CA,+1</item>
		<item>CV,+238</item>
		<item>KY,+1345</item>
		<item>CF,+236</item>
		<item>TD,+235</item>
		<item>CL,+56</item>
		<item>CN,+86</item>
		<item>CX,+61</item>
		<item>CC,+61</item>
		<item>CO,+57</item>
		<item>KM,+269</item>
		<item>CG,+242</item>
		<item>CD,+243</item>
		<item>CK,+682</item>
		<item>CR,+506</item>
		<item>CI,+225</item>
		<item>HR,+385</item>
		<item>CU,+53</item>
		<item>CW,+5999</item>
		<item>CY,+357</item>
		<item>CZ,+420</item>
		<item>DK,+45</item>
		<item>DG,+246</item>
		<item>DJ,+253</item>
		<item>DM,+1767</item>
		<item>DO,+1809,+1829,+1849</item>
		<item>TL,+670</item>
		<item>EC,+593</item>
		<item>EG,+20</item>
		<item>SV,+503</item>
		<item>GQ,+240</item>
		<item>ER,+291</item>
		<item>EE,+372</item>
		<item>ET,+251</item>
		<item>FK,+500</item>
		<item>FO,+298</item>
		<item>FJ,+679</item>
		<item>FI,+358</item>
		<item>FR,+33</item>
		<item>GF,+594</item>
		<item>PF,+689</item>
		<item>GA,+241</item>
		<item>GM,+220</item>
		<item>GE,+995</item>
		<item>DE,+49</item>
		<item>GH,+233</item>
		<item>GI,+350</item>
		<item>GR,+30</item>
		<item>GL,+299</item>
		<item>GD,+1473</item>
		<item>GP,+590</item>
		<item>GU,+1671</item>
		<item>GT,+502</item>
		<item>GG,+44</item>
		<item>GN,+224</item>
		<item>GW,+245</item>
		<item>GY,+592</item>
		<item>HT,+509</item>
		<item>HN,+504</item>
		<item>HK,+852</item>
		<item>HU,+36</item>
		<item>IS,+354</item>
		<item>IN,+91</item>
		<item>ID,+62</item>
		<item>IR,+98</item>
		<item>IQ,+964</item>
		<item>IE,+353</item>
		<item>IL,+972</item>
		<item>IT,+39</item>
		<item>JM,+1876</item>
		<item>SJ,+4779</item>
		<item>JP,+81</item>
		<item>JE,+44</item>
		<item>JO,+962</item>
		<item>KZ,+76,+77</item>
		<item>KE,+254</item>
		<item>KI,+686</item>
		<item>KP,+850</item>
		<item>KR,+82</item>
		<item>KW,+965</item>
		<item>KG,+996</item>
		<item>LA,+856</item>
		<item>LV,+371</item>
		<item>LB,+961</item>
		<item>LS,+266</item>
		<item>LR,+231</item>
		<item>LY,+218</item>
		<item>LI,+423</item>
		<item>LT,+370</item>
		<item>LU,+352</item>
		<item>MO,+853</item>
		<item>MK,+389</item>
		<item>MG,+261</item>
		<item>MW,+265</item>
		<item>MY,+60</item>
		<item>MV,+960</item>
		<item>ML,+223</item>
		<item>MT,+356</item>
		<item>MH,+692</item>
		<item>MQ,+596</item>
		<item>MR,+222</item>
		<item>MU,+230</item>
		<item>YT,+262</item>
		<item>MX,+52</item>
		<item>FM,+691</item>
		<item>MD,+373</item>
		<item>MC,+377</item>
		<item>MN,+976</item>
		<item>ME,+382</item>
		<item>MS,+1664</item>
		<item>MA,+212</item>
		<item>MZ,+258</item>
		<item>NA,+264</item>
		<item>NR,+674</item>
		<item>NP,+977</item>
		<item>NL,+31</item>
		<item>NC,+687</item>
		<item>NZ,+64</item>
		<item>NI,+505</item>
		<item>NE,+227</item>
		<item>NG,+234</item>
		<item>NU,+683</item>
		<item>NF,+672</item>
		<item>MP,+1670</item>
		<item>NO,+47</item>
		<item>OM,+968</item>
		<item>PK,+92</item>
		<item>PW,+680</item>
		<item>PS,+970</item>
		<item>PA,+507</item>
		<item>PG,+675</item>
		<item>PY,+595</item>
		<item>PE,+51</item>
		<item>PH,+63</item>
		<item>PN,+64</item>
		<item>PL,+48</item>
		<item>PT,+351</item>
		<item>PR,+1787,+1939</item>
		<item>QA,+974</item>
		<item>RE,+262</item>
		<item>RO,+40</item>
		<item>RU,+7</item>
		<item>RW,+250</item>
		<item>BL,+590</item>
		<item>SH,+290</item>
		<item>KN,+1869</item>
		<item>LC,+1758</item>
		<item>MF,+590</item>
		<item>PM,+508</item>
		<item>VC,+1784</item>
		<item>WS,+685</item>
		<item>SM,+378</item>
		<item>ST,+239</item>
		<item>SA,+966</item>
		<item>SN,+221</item>
		<item>RS,+381</item>
		<item>SC,+248</item>
		<item>SL,+232</item>
		<item>SG,+65</item>
		<item>BQ,+5993</item>
		<item>SX,+1721</item>
		<item>SK,+421</item>
		<item>SI,+386</item>
		<item>SB,+677</item>
		<item>SO,+252</item>
		<item>ZA,+27</item>
		<item>GS,+500</item>
		<item>!1,+99534</item>
		<item>SS,+211</item>
		<item>ES,+34</item>
		<item>LK,+94</item>
		<item>SD,+249</item>
		<item>SR,+597</item>
		<item>SJ,+4779</item>
		<item>SZ,+268</item>
		<item>SE,+46</item>
		<item>CH,+41</item>
		<item>SY,+963</item>
		<item>TW,+886</item>
		<item>TJ,+992</item>
		<item>TZ,+255</item>
		<item>TH,+66</item>
		<item>TG,+228</item>
		<item>TK,+690</item>
		<item>TO,+676</item>
		<item>TT,+1868</item>
		<item>TN,+216</item>
		<item>TR,+90</item>
		<item>TM,+993</item>
		<item>TC,+1649</item>
		<item>TV,+688</item>
		<item>UG,+256</item>
		<item>UA,+380</item>
		<item>AE,+971</item>
		<item>UK,+44</item>
		<item>US,+1</item>
		<item>UY,+598</item>
		<item>VI,+1340</item>
		<item>UZ,+998</item>
		<item>VU,+678</item>
		<item>VE,+58</item>
		<item>VA,+3906698,+379</item>
		<item>VN,+84</item>
		<item>WF,+681</item>
		<item>YE,+967</item>
		<item>ZM,+260</item>
		<item>!1,+255</item>
		<item>ZW,+263</item>
	</string-array>
	<string name="shared_string_telegram">Telegram</string>
	<string name="privacy_policy_use_telegram">We use a Telegram (messaging app) to connect people and make it easier for you to communicate with them.</string>
	<string name="privacy_policy_telegram_client">Telegram open platform and OsmAnd Tracker is one of the customers. Your contacts can use any other Telegram client.</string>
	<string name="privacy_policy_agree">By clicking continue you agree to the Telegram Privacy Policy and the OsmAnd Privacy Policy.</string>
	<string name="shared_string_accept">Accept</string>
	<string name="telegram_privacy_policy">Telegram Privacy Policy</string>
	<string name="osmand_privacy_policy">OsmAnd Privacy Policy</string>
	<string name="how_it_works">How it works</string>
	<string name="received_gps_points">Received GPX points: %1$s</string>
	<string name="shared_string_appearance">Appearance</string>
	<string name="show_gps_points">Show GPS points</string>
	<string name="show_gps_points_descr">Show quantity of collected and sent GPS points.</string>
	<string name="please_update_osmand">Please update OsmAnd to view data on the map</string>
	<string name="shared_string_update">Update</string>
	<string name="gps_points_in_buffer">sent (%1$d in buffer)</string>
	<string name="points_size">%1$d points</string>
	<string name="shared_string_date">Date</string>
	<string name="shared_string_collected">Collected</string>
	<string name="gps_points">Gps points</string>
	<string name="shared_string_sent">Sent</string>
	<string name="monitoring_is_enabled">Monitoring is enabled</string>
	<string name="monitoring_is_disabled">Monitoring is disabled</string>
	<string name="time_on_the_move">time on the move</string>
	<string name="average_altitude">Average altitude</string>
	<string name="average_speed">Average speed</string>
	<string name="open_in_osmand">Open in OsmAnd</string>
	<string name="end_date">End date</string>
	<string name="start_date">Start date</string>
	<string name="timeline_description">Enable monitoring to collect movement data in the background.</string>
	<string name="send_location_as">Send location as</string>
	<string name="send_location_as_descr">Choose how messages with your location will look like.</string>
	<string name="shared_string_map">Map</string>
	<string name="shared_string_text">Text</string>
	<string name="map_and_text">Map and text</string>
	<string name="last_update_from_telegram">Last update from Telegram</string>
	<string name="enter_another_device_name">Pick a name you haven\'t already used</string>
	<string name="device_added_successfully">%1$s added.</string>
	<string name="shared_string_add">Add</string>
	<string name="error_adding_new_device">Could not add new device</string>
	<string name="enter_device_name_description">Name your new device in max. 200 symbols.</string>
	<string name="device_name_is_too_long">Device name too long</string>
	<string name="device_name_cannot_be_empty">Device name cannot be empty</string>
	<string name="device_name">Device name</string>
	<string name="shared_string_hide">Hide</string>
	<string name="share_location_as_description_second_line">You can create and view the Device ID in the telegram client using the %1$s chat bot. %2$s</string>
	<string name="share_location_as_description">If you want to connect multiple devices to one telegram account, you need to use different Device to share your location.</string>
	<string name="last_updated_location">Last updated location:</string>
	<string name="successfully_sent_and_updated">Successfully sent and updated</string>
	<string name="not_possible_to_send_to_telegram_chats">Not possible to send to Telegram chats:</string>
	<string name="waiting_for_response_from_telegram">Waiting for response from Telegram</string>
	<string name="sending_location_messages">Sending location</string>
	<string name="initializing">Starting</string>
	<string name="searching_for_gps">Positioning…</string>
	<string name="connecting_to_the_internet">Connecting to the Internet</string>
	<string name="background_work_description">Change battery optimization settings to stabilize location sharing.</string>
	<string name="background_work">Background work</string>
	<string name="battery_optimization_description">Turn off battery optimization for OsmAnd Telegram so that it isn\'t suddenly turned off when in the background.</string>
	<string name="sharing_in_background">Sharing in the background</string>
	<string name="go_to_settings">Go to settings</string>
	<string name="shared_string_later">Later</string>
	<string name="not_sent_yet">Not sent yet</string>
	<string name="not_found_yet">Not found yet</string>
	<string name="re_send_location">Re-send location</string>
	<string name="last_available_location">Last available location</string>
	<string name="sharing_status">Sharing status</string>
	<string name="sharing_enabled">Sharing: Enabled</string>
	<string name="shared_string_status">Status</string>
	<string name="no_gps_connection">No GPS connection</string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="shared_string_disable">Disable</string>
	<string name="shared_string_save">Save</string>
	<string name="phone_number_title">Phone number</string>
	<string name="shared_string_password">Password</string>
	<string name="authentication_code">Authentication code</string>
	<string name="shared_string_continue">Continue</string>
	<string name="osmand_logo">OsmAnd logo</string>
	<string name="install_osmand_dialog_message">You need to install the free or paid version of OsmAnd first</string>
	<string name="install_osmand">Install OsmAnd</string>
	<string name="shared_string_authorization">Authorization</string>
	<string name="shared_string_authorization_descr">Please enter your Telegram phone number in international format</string>
	<string name="shared_string_welcome">Welcome</string>
	<string name="welcome_descr"><![CDATA[<b>OsmAnd Location Sharing</b> lets you share your location and see that of others in the OsmAnd.<br/><br/>The app uses Telegram API and you need a Telegram account.]]></string>
</resources>