<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/welcome_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="@dimen/dialog_padding_horizontal_edit"
		android:layout_marginRight="@dimen/dialog_padding_horizontal_edit"
		android:layout_marginTop="@dimen/dialog_padding_vertical"
		android:orientation="vertical"
		android:visibility="visible">

		<TextView
			android:id="@+id/welcome_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/shared_string_welcome"
			android:textColor="?android:attr/textColorPrimary"
			android:textSize="@dimen/title_text_size"
			android:textStyle="bold" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="@dimen/dialog_padding_vertical"
			android:layout_weight="1"
			android:fillViewport="true">

			<TextView
				android:id="@+id/welcome_descr"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textColor="?android:attr/textColorSecondary"
				android:textSize="@dimen/descr_text_size"
				tools:text="@string/welcome_descr" />

		</ScrollView>

		<Button
			android:id="@+id/welcome_continue_button"
			style="@style/DialogActionButtonActive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/dialog_padding_vertical"
			android:layout_marginLeft="@dimen/content_padding_standard"
			android:layout_marginRight="@dimen/content_padding_standard"
			android:layout_marginTop="@dimen/content_padding_standard"
			android:text="@string/shared_string_continue" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/login_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:visibility="gone">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:minHeight="@dimen/action_bar_height"
			android:orientation="horizontal">

			<android.support.v7.widget.AppCompatImageView
				android:id="@+id/back_button"
				android:layout_width="@dimen/dialog_button_height"
				android:layout_height="@dimen/dialog_button_height"
				android:layout_marginEnd="@dimen/content_padding_standard"
				android:layout_marginLeft="@dimen/content_padding_half"
				android:layout_marginRight="@dimen/content_padding_standard"
				android:layout_marginStart="@dimen/content_padding_half"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:scaleType="centerInside"
				android:src="@drawable/ic_arrow_back"
				android:tint="?attr/icon_color" />

			<TextView
				android:id="@+id/login_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/content_padding_standard"
				android:layout_marginRight="@dimen/content_padding_standard"
				android:textColor="?attr/ctrl_active_color"
				android:textSize="@dimen/title_text_size"
				android:textStyle="bold"
				tools:text="@string/shared_string_authorization" />

		</LinearLayout>

		<TextView
			android:id="@+id/login_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/content_padding_standard"
			android:layout_marginEnd="@dimen/dialog_padding_horizontal"
			android:layout_marginLeft="@dimen/dialog_padding_horizontal"
			android:layout_marginRight="@dimen/dialog_padding_horizontal"
			android:layout_marginStart="@dimen/dialog_padding_horizontal"
			android:layout_marginTop="@dimen/content_padding_standard"
			android:textColor="?android:attr/textColorSecondary"
			android:textSize="@dimen/descr_text_size"
			tools:text="@string/shared_string_authorization_descr" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:fillViewport="true">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginEnd="@dimen/dialog_padding_horizontal_edit"
				android:layout_marginLeft="@dimen/dialog_padding_horizontal_edit"
				android:layout_marginRight="@dimen/dialog_padding_horizontal_edit"
				android:layout_marginStart="@dimen/dialog_padding_horizontal_edit"
				android:layout_marginTop="@dimen/content_padding_standard"
				android:orientation="vertical">

				<LinearLayout
					android:id="@+id/enter_phone_number_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:visibility="visible">

					<studio.carbonylgroup.textfieldboxes.TextFieldBoxes
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:hasClearButton="true"
						app:labelText="@string/phone_number_title">

						<studio.carbonylgroup.textfieldboxes.ExtendedEditText
							android:id="@+id/phone_number_edit_text"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="phone"
							android:text="@string/plus"
							tools:text="+380661234567" />

					</studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/enter_code_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:visibility="gone">

					<studio.carbonylgroup.textfieldboxes.TextFieldBoxes
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:hasClearButton="true"
						app:labelText="@string/authentication_code">

						<studio.carbonylgroup.textfieldboxes.ExtendedEditText
							android:id="@+id/code_edit_text"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="number"
							tools:text="123456" />

					</studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/enter_password_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:visibility="gone">

					<studio.carbonylgroup.textfieldboxes.TextFieldBoxes
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						app:hasClearButton="true"
						app:labelText="@string/shared_string_password">

						<studio.carbonylgroup.textfieldboxes.ExtendedEditText
							android:id="@+id/password_edit_text"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="textPassword"
							tools:text="12345678" />

					</studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/progress_layout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="vertical"
					android:visibility="gone">

					<ProgressBar
						android:layout_width="@dimen/progress_bar_size_small"
						android:layout_height="@dimen/progress_bar_size_small" />

				</LinearLayout>

			</LinearLayout>

		</ScrollView>

		<Button
			android:id="@+id/continue_button"
			style="@style/DialogActionButtonActive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="@dimen/dialog_padding_vertical"
			android:layout_marginLeft="@dimen/content_padding_standard"
			android:layout_marginRight="@dimen/content_padding_standard"
			android:layout_marginTop="@dimen/content_padding_standard"
			android:text="@string/shared_string_continue" />

	</LinearLayout>

</LinearLayout>